--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Builder\NoncapturingGroup.cs" />
     <Compile Include="Builder\NotCharGroup.cs" />
     <Compile Include="Builder\NumberBackreference.cs" />
-    <Compile Include="Builder\OptionsGroup.cs" />
+    <Compile Include="Builder\GroupOptions.cs" />
     <Compile Include="Builder\OrConstruct.cs" />
     <Compile Include="Builder\QuantifiableExpression.cs" />
     <Compile Include="Builder\Quantifier.cs" />
