--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -60,14 +60,22 @@
     <Compile Include="Builder\BuildContext.cs" />
     <Compile Include="Builder\BuildSettings.cs" />
     <Compile Include="Builder\CharClass.cs" />
-    <Compile Include="Builder\CharGroup.cs" />
+    <Compile Include="Builder\CharGroup\CharGroup.cs" />
+    <Compile Include="Builder\CharItem\TextCharItem.cs" />
+    <Compile Include="Builder\CharItem\CharCodeCharItem.cs" />
+    <Compile Include="Builder\CharItem\CharsCharItem.cs" />
+    <Compile Include="Builder\CharItem\CodeRangeCharItem.cs" />
+    <Compile Include="Builder\CharItem\RangeCharItem.cs" />
+    <Compile Include="Builder\CharItem\AsciiCharItem.cs" />
+    <Compile Include="Builder\CharItem\CharClassCharItem.cs" />
+    <Compile Include="Builder\CharItem\NotUnicodeCategoryCharItem.cs" />
+    <Compile Include="Builder\CharItem\NotUnicodeBlockCharItem.cs" />
+    <Compile Include="Builder\CharItem\UnicodeCategoryCharItem.cs" />
+    <Compile Include="Builder\CharItem\UnicodeBlockCharItem.cs" />
     <Compile Include="Builder\CharItem\CharItem.cs" />
     <Compile Include="Builder\CharItem\CharItems_Ascii.cs" />
-    <Compile Include="Builder\CharItem\CharItems_CharClass.cs" />
-    <Compile Include="Builder\CharItem\CharItems_Chars.cs" />
+    <Compile Include="Builder\CharItem\CharItems.cs" />
     <Compile Include="Builder\CharItem\CharItem_Ascii.cs" />
-    <Compile Include="Builder\CharItem\CharItem_CharClass.cs" />
-    <Compile Include="Builder\CharItem\CharItem_Chars.cs" />
     <Compile Include="Builder\CharSubtraction.cs" />
     <Compile Include="Builder\EscapeMode.cs" />
     <Compile Include="Builder\ExactQuantifier.cs" />
@@ -104,7 +112,6 @@
     <Compile Include="Builder\NamedGroup.cs" />
     <Compile Include="Builder\NonbacktrackingGroup.cs" />
     <Compile Include="Builder\NoncapturingGroup.cs" />
-    <Compile Include="Builder\NotCharGroup.cs" />
     <Compile Include="Builder\NumberBackreference.cs" />
     <Compile Include="Builder\GroupOptions.cs" />
     <Compile Include="Builder\OrConstruct.cs" />
@@ -123,6 +130,34 @@
     <Compile Include="Builder\UnicodeBlock.cs" />
     <Compile Include="Builder\UnicodeCategory.cs" />
     <Compile Include="Builder\Utilities.cs" />
+    <Compile Include="Builder\CharGroup\NotAsciiCharGroup.cs" />
+    <Compile Include="Builder\CharCodeExpression.cs" />
+    <Compile Include="Builder\AsciiCharExpression.cs" />
+    <Compile Include="Builder\CharClassExpression.cs" />
+    <Compile Include="Builder\AnyExpression.cs" />
+    <Compile Include="Builder\CharGroup\NotCodeRangeGroup.cs" />
+    <Compile Include="Builder\CharGroup\NotCharCodeGroup.cs" />
+    <Compile Include="Builder\CharGroup\NotCharItemGroup.cs" />
+    <Compile Include="Builder\CharGroup\NotCharRangeGroup.cs" />
+    <Compile Include="Builder\CharGroup\NotCharsGroup.cs" />
+    <Compile Include="Builder\CharGroup\NotUnicodeBlockGroup.cs" />
+    <Compile Include="Builder\NotUnicodeBlockExpression.cs" />
+    <Compile Include="Builder\NotUnicodeCategoryExpression.cs" />
+    <Compile Include="Builder\CharGroup\NotTextCharGroup.cs" />
+    <Compile Include="Builder\UnicodeCategoryExpression.cs" />
+    <Compile Include="Builder\UnicodeBlockExpression.cs" />
+    <Compile Include="Builder\CharGroup\CodeRangeGroup.cs" />
+    <Compile Include="Builder\CharGroup\CharRangeGroup.cs" />
+    <Compile Include="Builder\CharGroup\TextCharGroup.cs" />
+    <Compile Include="Builder\CharGroup\CharItemGroup.cs" />
+    <Compile Include="Builder\CharGroup\CharCodeGroup.cs" />
+    <Compile Include="Builder\CharGroup\CharsGroup.cs" />
+    <Compile Include="Builder\CharGroup\CharClassGroup.cs" />
+    <Compile Include="Builder\CharGroup\NotUnicodeCategoryGroup.cs" />
+    <Compile Include="Builder\CharGroup\UnicodeCategoryGroup.cs" />
+    <Compile Include="Builder\CharGroup\UnicodeBlockGroup.cs" />
+    <Compile Include="Builder\CharGroup\AsciiCharGroup.cs" />
+    <Compile Include="Builder\CharExpression.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
     <Compile Include="Core\ResultMode.cs" />
@@ -165,9 +200,13 @@
     <None Include="Regexator_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <CodeAnalysisDictionary Include="AppDictionary.xml" />
+    <CodeAnalysisDictionary Include="AppDictionary.xml">
+      <SubType>Designer</SubType>
+    </CodeAnalysisDictionary>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Builder\_Dev\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
