--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Builder\Assertion.cs" />
     <Compile Include="Builder\AssertionKind.cs" />
     <Compile Include="Builder\AtLeastQuantifier.cs" />
-    <Compile Include="Builder\BalancingGroup.cs" />
+    <Compile Include="Builder\Groups\BalancingGroup.cs" />
     <Compile Include="Builder\BuildContext.cs" />
     <Compile Include="Builder\Anchors\StartOfInput.cs" />
     <Compile Include="Builder\PatternSettings.cs" />
@@ -110,19 +110,19 @@
     <Compile Include="Builder\Expression\Expression_Other.cs" />
     <Compile Include="Builder\Expression\Expression_Quantifier.cs" />
     <Compile Include="Builder\Quantifiers\FromToQuantifier.cs" />
-    <Compile Include="Builder\GroupingConstruct.cs" />
+    <Compile Include="Builder\Groups\GroupingConstruct.cs" />
     <Compile Include="Builder\IBaseGroup.cs" />
     <Compile Include="Builder\IdentifierSeparatorKind.cs" />
     <Compile Include="Builder\IExcludedGroup.cs" />
     <Compile Include="Builder\IfConstruct.cs" />
     <Compile Include="Builder\InlineOptions.cs" />
     <Compile Include="Builder\NameBackreference.cs" />
-    <Compile Include="Builder\NumberNamedGroup.cs" />
-    <Compile Include="Builder\NamedGroup.cs" />
-    <Compile Include="Builder\NonbacktrackingGroup.cs" />
-    <Compile Include="Builder\NoncapturingGroup.cs" />
+    <Compile Include="Builder\Groups\NumberNamedGroup.cs" />
+    <Compile Include="Builder\Groups\NamedGroup.cs" />
+    <Compile Include="Builder\Groups\NonbacktrackingGroup.cs" />
+    <Compile Include="Builder\Groups\NoncapturingGroup.cs" />
     <Compile Include="Builder\NumberBackreference.cs" />
-    <Compile Include="Builder\GroupOptions.cs" />
+    <Compile Include="Builder\Groups\GroupOptions.cs" />
     <Compile Include="Builder\OrConstruct.cs" />
     <Compile Include="Builder\QuantifiableExpression.cs" />
     <Compile Include="Builder\Quantifiers\OneManyQuantifier.cs" />
@@ -130,7 +130,7 @@
     <Compile Include="Builder\Quantifiers\Quantifier.cs" />
     <Compile Include="Builder\QuantifierKind.cs" />
     <Compile Include="Builder\Quantifiers\MaybeQuantifier.cs" />
-    <Compile Include="Builder\Subexpression.cs" />
+    <Compile Include="Builder\Groups\Subexpression.cs" />
     <Compile Include="Builder\Substitutions.cs" />
     <Compile Include="Builder\Quantifiers\SymbolQuantifier.cs" />
     <Compile Include="Builder\Syntax\Syntax.cs" />
