Assertions extended, TextExpression added

--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -63,12 +63,19 @@
     <Compile Include="Builder\Alternations\IfExpression.cs" />
     <Compile Include="Builder\Alternations\GroupNumberIfExpression.cs" />
     <Compile Include="Builder\Alternations\GroupNameIfExpression.cs" />
+    <Compile Include="Builder\Assertion\CharCodeAssertion.cs" />
+    <Compile Include="Builder\Assertion\CharAssertion.cs" />
+    <Compile Include="Builder\Assertion\AsciiCharAssertion.cs" />
+    <Compile Include="Builder\Assertion\CharClassAssertion.cs" />
+    <Compile Include="Builder\Assertion\UnicodeBlockAssertion.cs" />
+    <Compile Include="Builder\Assertion\UnicodeCategoryAssertion.cs" />
     <Compile Include="Builder\InlineCommentExpression.cs" />
     <Compile Include="Builder\InlineOptionsExpression.cs" />
     <Compile Include="Builder\Alternations\OrExpression.cs" />
     <Compile Include="Builder\AsciiChar.cs" />
-    <Compile Include="Builder\Assertion.cs" />
+    <Compile Include="Builder\Assertion\Assertion.cs" />
     <Compile Include="Builder\AssertionKind.cs" />
+    <Compile Include="Builder\TextExpression.cs" />
     <Compile Include="Builder\Quantifiers\AtLeastQuantifier.cs" />
     <Compile Include="Builder\Groups\BalancingGroup.cs" />
     <Compile Include="Builder\BuildContext.cs" />
@@ -100,7 +107,7 @@
     <Compile Include="Builder\Alternations\Expressions.cs" />
     <Compile Include="Builder\Expressions\Expressions_Anchor.cs" />
     <Compile Include="Builder\Expressions\Expressions_Ascii.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Assertion.cs" />
+    <Compile Include="Builder\Assertion\Expressions.cs" />
     <Compile Include="Builder\Expressions\Expressions_CharClass.cs" />
     <Compile Include="Builder\Expressions\Expressions_Chars.cs" />
     <Compile Include="Builder\Expressions\Expressions_Groups.cs" />
@@ -111,7 +118,7 @@
     <Compile Include="Builder\Alternations\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_Anchors.cs" />
     <Compile Include="Builder\Expression\Expression_Ascii.cs" />
-    <Compile Include="Builder\Expression\Expression_Assertion.cs" />
+    <Compile Include="Builder\Assertion\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_CharClass.cs" />
     <Compile Include="Builder\Expression\Expression_Chars.cs" />
     <Compile Include="Builder\Expression\Expression_Group.cs" />
