--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -69,13 +69,13 @@
     <Compile Include="Builder\Assertion\CharClassAssertion.cs" />
     <Compile Include="Builder\Assertion\UnicodeBlockAssertion.cs" />
     <Compile Include="Builder\Assertion\UnicodeCategoryAssertion.cs" />
-    <Compile Include="Builder\InlineCommentExpression.cs" />
-    <Compile Include="Builder\InlineOptionsExpression.cs" />
+    <Compile Include="Builder\Expression\InlineCommentExpression.cs" />
+    <Compile Include="Builder\Expression\InlineOptionsExpression.cs" />
     <Compile Include="Builder\Alternations\OrExpression.cs" />
     <Compile Include="Builder\AsciiChar.cs" />
     <Compile Include="Builder\Assertion\Assertion.cs" />
     <Compile Include="Builder\AssertionKind.cs" />
-    <Compile Include="Builder\TextExpression.cs" />
+    <Compile Include="Builder\Expression\TextExpression.cs" />
     <Compile Include="Builder\Quantifiers\AtLeastQuantifier.cs" />
     <Compile Include="Builder\Groups\BalancingGroup.cs" />
     <Compile Include="Builder\BuildContext.cs" />
@@ -105,25 +105,25 @@
     <Compile Include="Builder\ExpressionKind.cs" />
     <Compile Include="Builder\Expressions\Expressions.cs" />
     <Compile Include="Builder\Alternations\Expressions.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Anchor.cs" />
+    <Compile Include="Builder\Anchors\Expressions.cs" />
     <Compile Include="Builder\Expressions\Expressions_Ascii.cs" />
     <Compile Include="Builder\Assertion\Expressions.cs" />
     <Compile Include="Builder\Expressions\Expressions_CharClass.cs" />
     <Compile Include="Builder\Expressions\Expressions_Chars.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Groups.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Quantifiers.cs" />
+    <Compile Include="Builder\Groups\Expressions.cs" />
+    <Compile Include="Builder\Quantifiers\Expressions.cs" />
     <Compile Include="Builder\Expressions\UnicodeBlocks.cs" />
     <Compile Include="Builder\Expressions\UnicodeCategories.cs" />
     <Compile Include="Builder\Expression\Expression.cs" />
     <Compile Include="Builder\Alternations\Expression.cs" />
-    <Compile Include="Builder\Expression\Expression_Anchors.cs" />
+    <Compile Include="Builder\Anchors\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_Ascii.cs" />
     <Compile Include="Builder\Assertion\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_CharClass.cs" />
     <Compile Include="Builder\Expression\Expression_Chars.cs" />
-    <Compile Include="Builder\Expression\Expression_Group.cs" />
+    <Compile Include="Builder\Groups\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_Other.cs" />
-    <Compile Include="Builder\Expression\Expression_Quantifier.cs" />
+    <Compile Include="Builder\Quantifiers\Expression.cs" />
     <Compile Include="Builder\Quantifiers\FromToQuantifier.cs" />
     <Compile Include="Builder\Groups\GroupingConstruct.cs" />
     <Compile Include="Builder\IBaseGroup.cs" />
@@ -139,7 +139,7 @@
     <Compile Include="Builder\NumberBackreference.cs" />
     <Compile Include="Builder\Groups\GroupOptions.cs" />
     <Compile Include="Builder\Alternations\AnyExpression.cs" />
-    <Compile Include="Builder\QuantifiableExpression.cs" />
+    <Compile Include="Builder\Quantifiable\QuantifiableExpression.cs" />
     <Compile Include="Builder\Quantifiers\OneManyQuantifier.cs" />
     <Compile Include="Builder\Quantifiers\MaybeManyQuantifier.cs" />
     <Compile Include="Builder\Quantifiers\Quantifier.cs" />
@@ -157,21 +157,21 @@
     <Compile Include="Builder\UnicodeCategory.cs" />
     <Compile Include="Builder\Utilities.cs" />
     <Compile Include="Builder\CharGroup\NotAsciiCharGroup.cs" />
-    <Compile Include="Builder\CharCodeExpression.cs" />
-    <Compile Include="Builder\AsciiCharExpression.cs" />
-    <Compile Include="Builder\CharClassExpression.cs" />
-    <Compile Include="Builder\AnyCharExpression.cs" />
+    <Compile Include="Builder\Quantifiable\CharCodeExpression.cs" />
+    <Compile Include="Builder\Quantifiable\AsciiCharExpression.cs" />
+    <Compile Include="Builder\Quantifiable\CharClassExpression.cs" />
+    <Compile Include="Builder\Quantifiable\AnyCharExpression.cs" />
     <Compile Include="Builder\CharGroup\NotCodeRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharCodeGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharItemGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharsGroup.cs" />
     <Compile Include="Builder\CharGroup\NotUnicodeBlockGroup.cs" />
-    <Compile Include="Builder\NotUnicodeBlockExpression.cs" />
-    <Compile Include="Builder\NotUnicodeCategoryExpression.cs" />
+    <Compile Include="Builder\Quantifiable\NotUnicodeBlockExpression.cs" />
+    <Compile Include="Builder\Quantifiable\NotUnicodeCategoryExpression.cs" />
     <Compile Include="Builder\CharGroup\NotTextCharGroup.cs" />
-    <Compile Include="Builder\UnicodeCategoryExpression.cs" />
-    <Compile Include="Builder\UnicodeBlockExpression.cs" />
+    <Compile Include="Builder\Quantifiable\UnicodeCategoryExpression.cs" />
+    <Compile Include="Builder\Quantifiable\UnicodeBlockExpression.cs" />
     <Compile Include="Builder\CharGroup\CodeRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\CharRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\TextCharGroup.cs" />
@@ -183,7 +183,7 @@
     <Compile Include="Builder\CharGroup\UnicodeCategoryGroup.cs" />
     <Compile Include="Builder\CharGroup\UnicodeBlockGroup.cs" />
     <Compile Include="Builder\CharGroup\AsciiCharGroup.cs" />
-    <Compile Include="Builder\CharExpression.cs" />
+    <Compile Include="Builder\Quantifiable\CharExpression.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
     <Compile Include="Core\ResultMode.cs" />
