Expressions split, files reorganized

--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -69,13 +69,13 @@
     <Compile Include="Builder\Assertion\CharClassAssertion.cs" />
     <Compile Include="Builder\Assertion\UnicodeBlockAssertion.cs" />
     <Compile Include="Builder\Assertion\UnicodeCategoryAssertion.cs" />
-    <Compile Include="Builder\InlineCommentExpression.cs" />
-    <Compile Include="Builder\InlineOptionsExpression.cs" />
+    <Compile Include="Builder\Expressions\InlineCommentExpression.cs" />
+    <Compile Include="Builder\Expressions\InlineOptionsExpression.cs" />
     <Compile Include="Builder\Alternations\OrExpression.cs" />
     <Compile Include="Builder\AsciiChar.cs" />
     <Compile Include="Builder\Assertion\Assertion.cs" />
-    <Compile Include="Builder\AssertionKind.cs" />
-    <Compile Include="Builder\TextExpression.cs" />
+    <Compile Include="Builder\Assertion\AssertionKind.cs" />
+    <Compile Include="Builder\Expressions\TextExpression.cs" />
     <Compile Include="Builder\Quantifiers\AtLeastQuantifier.cs" />
     <Compile Include="Builder\Groups\BalancingGroup.cs" />
     <Compile Include="Builder\BuildContext.cs" />
@@ -99,31 +99,30 @@
     <Compile Include="Builder\CharItem\CharItems_Ascii.cs" />
     <Compile Include="Builder\CharItem\CharItems.cs" />
     <Compile Include="Builder\CharItem\CharItem_Ascii.cs" />
-    <Compile Include="Builder\CharSubtraction.cs" />
+    <Compile Include="Builder\Expressions\CharSubtraction.cs" />
     <Compile Include="Builder\EscapeMode.cs" />
     <Compile Include="Builder\Quantifiers\ExactQuantifier.cs" />
     <Compile Include="Builder\ExpressionKind.cs" />
-    <Compile Include="Builder\Expressions\Expressions.cs" />
-    <Compile Include="Builder\Alternations\Expressions.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Anchor.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Ascii.cs" />
-    <Compile Include="Builder\Assertion\Expressions.cs" />
-    <Compile Include="Builder\Expressions\Expressions_CharClass.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Chars.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Groups.cs" />
-    <Compile Include="Builder\Expressions\Expressions_Quantifiers.cs" />
-    <Compile Include="Builder\Expressions\UnicodeBlocks.cs" />
-    <Compile Include="Builder\Expressions\UnicodeCategories.cs" />
-    <Compile Include="Builder\Expression\Expression.cs" />
+    <Compile Include="Builder\Expressions.cs" />
+    <Compile Include="Builder\Alternations\Alternations.cs" />
+    <Compile Include="Builder\Anchors\Anchors.cs" />
+    <Compile Include="Builder\Characters.cs" />
+    <Compile Include="Builder\Assertion\Assertions.cs" />
+    <Compile Include="Builder\CharClasses.cs" />
+    <Compile Include="Builder\Groups\Groups.cs" />
+    <Compile Include="Builder\Quantifiers\Quantifiers.cs" />
+    <Compile Include="Builder\UnicodeBlocks.cs" />
+    <Compile Include="Builder\UnicodeCategories.cs" />
+    <Compile Include="Builder\Expression.cs" />
     <Compile Include="Builder\Alternations\Expression.cs" />
-    <Compile Include="Builder\Expression\Expression_Anchors.cs" />
-    <Compile Include="Builder\Expression\Expression_Ascii.cs" />
+    <Compile Include="Builder\Anchors\Expression.cs" />
+    <Compile Include="Builder\Expression\Expression_Characters.cs" />
     <Compile Include="Builder\Assertion\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_CharClass.cs" />
     <Compile Include="Builder\Expression\Expression_Chars.cs" />
-    <Compile Include="Builder\Expression\Expression_Group.cs" />
+    <Compile Include="Builder\Groups\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_Other.cs" />
-    <Compile Include="Builder\Expression\Expression_Quantifier.cs" />
+    <Compile Include="Builder\Quantifiers\Expression.cs" />
     <Compile Include="Builder\Quantifiers\FromToQuantifier.cs" />
     <Compile Include="Builder\Groups\GroupingConstruct.cs" />
     <Compile Include="Builder\IBaseGroup.cs" />
@@ -131,19 +130,19 @@
     <Compile Include="Builder\IExcludedGroup.cs" />
     <Compile Include="Builder\Alternations\AlternationConstruct.cs" />
     <Compile Include="Builder\InlineOptions.cs" />
-    <Compile Include="Builder\NameBackreference.cs" />
+    <Compile Include="Builder\Expressions\NameBackreference.cs" />
     <Compile Include="Builder\Groups\NumberNamedGroup.cs" />
     <Compile Include="Builder\Groups\NamedGroup.cs" />
     <Compile Include="Builder\Groups\NonbacktrackingGroup.cs" />
     <Compile Include="Builder\Groups\NoncapturingGroup.cs" />
-    <Compile Include="Builder\NumberBackreference.cs" />
+    <Compile Include="Builder\Expressions\NumberBackreference.cs" />
     <Compile Include="Builder\Groups\GroupOptions.cs" />
     <Compile Include="Builder\Alternations\AnyExpression.cs" />
-    <Compile Include="Builder\QuantifiableExpression.cs" />
+    <Compile Include="Builder\Expressions\QuantifiableExpression.cs" />
     <Compile Include="Builder\Quantifiers\OneManyQuantifier.cs" />
     <Compile Include="Builder\Quantifiers\MaybeManyQuantifier.cs" />
     <Compile Include="Builder\Quantifiers\Quantifier.cs" />
-    <Compile Include="Builder\QuantifierKind.cs" />
+    <Compile Include="Builder\Quantifiers\QuantifierKind.cs" />
     <Compile Include="Builder\Quantifiers\MaybeQuantifier.cs" />
     <Compile Include="Builder\Groups\Subexpression.cs" />
     <Compile Include="Builder\Substitutions.cs" />
@@ -157,21 +156,21 @@
     <Compile Include="Builder\UnicodeCategory.cs" />
     <Compile Include="Builder\Utilities.cs" />
     <Compile Include="Builder\CharGroup\NotAsciiCharGroup.cs" />
-    <Compile Include="Builder\CharCodeExpression.cs" />
-    <Compile Include="Builder\AsciiCharExpression.cs" />
-    <Compile Include="Builder\CharClassExpression.cs" />
-    <Compile Include="Builder\AnyCharExpression.cs" />
+    <Compile Include="Builder\Expressions\CharCodeExpression.cs" />
+    <Compile Include="Builder\Expressions\AsciiCharExpression.cs" />
+    <Compile Include="Builder\Expressions\CharClassExpression.cs" />
+    <Compile Include="Builder\Expressions\AnyCharExpression.cs" />
     <Compile Include="Builder\CharGroup\NotCodeRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharCodeGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharItemGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\NotCharsGroup.cs" />
     <Compile Include="Builder\CharGroup\NotUnicodeBlockGroup.cs" />
-    <Compile Include="Builder\NotUnicodeBlockExpression.cs" />
-    <Compile Include="Builder\NotUnicodeCategoryExpression.cs" />
+    <Compile Include="Builder\Expressions\NotUnicodeBlockExpression.cs" />
+    <Compile Include="Builder\Expressions\NotUnicodeCategoryExpression.cs" />
     <Compile Include="Builder\CharGroup\NotTextCharGroup.cs" />
-    <Compile Include="Builder\UnicodeCategoryExpression.cs" />
-    <Compile Include="Builder\UnicodeBlockExpression.cs" />
+    <Compile Include="Builder\Expressions\UnicodeCategoryExpression.cs" />
+    <Compile Include="Builder\Expressions\UnicodeBlockExpression.cs" />
     <Compile Include="Builder\CharGroup\CodeRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\CharRangeGroup.cs" />
     <Compile Include="Builder\CharGroup\TextCharGroup.cs" />
@@ -183,7 +182,7 @@
     <Compile Include="Builder\CharGroup\UnicodeCategoryGroup.cs" />
     <Compile Include="Builder\CharGroup\UnicodeBlockGroup.cs" />
     <Compile Include="Builder\CharGroup\AsciiCharGroup.cs" />
-    <Compile Include="Builder\CharExpression.cs" />
+    <Compile Include="Builder\Expressions\CharExpression.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
     <Compile Include="Core\ResultMode.cs" />
