--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -51,18 +51,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder\Alternations\AnyTextExpression.cs" />
-    <Compile Include="Builder\Anchors\Anchor.cs" />
-    <Compile Include="Builder\Anchors\EndOrBeforeEndingNewLine.cs" />
-    <Compile Include="Builder\Anchors\NotWordBoundary.cs" />
-    <Compile Include="Builder\Anchors\WordBoundary.cs" />
-    <Compile Include="Builder\Anchors\PreviousMatchEnd.cs" />
-    <Compile Include="Builder\Anchors\EndOfLine.cs" />
-    <Compile Include="Builder\Anchors\EndOfInput.cs" />
-    <Compile Include="Builder\Anchors\StartOfLine.cs" />
-    <Compile Include="Builder\Alternations\IfExpression.cs" />
-    <Compile Include="Builder\Alternations\GroupNumberIfExpression.cs" />
-    <Compile Include="Builder\Alternations\GroupNameIfExpression.cs" />
+    <Compile Include="Builder\Alternation\AnyTextExpression.cs" />
+    <Compile Include="Builder\Anchor\Anchor.cs" />
+    <Compile Include="Builder\Anchor\EndOrBeforeEndingNewLine.cs" />
+    <Compile Include="Builder\Anchor\NotWordBoundary.cs" />
+    <Compile Include="Builder\Anchor\WordBoundary.cs" />
+    <Compile Include="Builder\Anchor\PreviousMatchEnd.cs" />
+    <Compile Include="Builder\Anchor\EndOfLine.cs" />
+    <Compile Include="Builder\Anchor\EndOfInput.cs" />
+    <Compile Include="Builder\Anchor\StartOfLine.cs" />
+    <Compile Include="Builder\Alternation\IfExpression.cs" />
+    <Compile Include="Builder\Alternation\GroupNumberIfExpression.cs" />
+    <Compile Include="Builder\Alternation\GroupNameIfExpression.cs" />
     <Compile Include="Builder\Assertion\CharCodeAssertion.cs" />
     <Compile Include="Builder\Assertion\CharAssertion.cs" />
     <Compile Include="Builder\Assertion\AsciiCharAssertion.cs" />
@@ -71,16 +71,16 @@
     <Compile Include="Builder\Assertion\UnicodeCategoryAssertion.cs" />
     <Compile Include="Builder\Expressions\InlineCommentExpression.cs" />
     <Compile Include="Builder\Expressions\InlineOptionsExpression.cs" />
-    <Compile Include="Builder\Alternations\OrExpression.cs" />
+    <Compile Include="Builder\Alternation\OrExpression.cs" />
     <Compile Include="Builder\AsciiChar.cs" />
     <Compile Include="Builder\Assertion\Assertion.cs" />
     <Compile Include="Builder\Assertion\AssertionKind.cs" />
     <Compile Include="Builder\Expressions\TextExpression.cs" />
-    <Compile Include="Builder\Quantifiers\AtLeastQuantifier.cs" />
-    <Compile Include="Builder\Groups\BalancingGroup.cs" />
+    <Compile Include="Builder\Quantifier\AtLeastQuantifier.cs" />
+    <Compile Include="Builder\Group\BalancingGroup.cs" />
     <Compile Include="Builder\BuildContext.cs" />
-    <Compile Include="Builder\Anchors\StartOfInput.cs" />
-    <Compile Include="Builder\Groups\QuantifierGroup.cs" />
+    <Compile Include="Builder\Anchor\StartOfInput.cs" />
+    <Compile Include="Builder\Group\QuantifierGroup.cs" />
     <Compile Include="Builder\PatternSettings.cs" />
     <Compile Include="Builder\CharClass.cs" />
     <Compile Include="Builder\CharGroup\CharGroup.cs" />
@@ -101,50 +101,50 @@
     <Compile Include="Builder\CharItem\CharItem_Ascii.cs" />
     <Compile Include="Builder\Expressions\CharSubtraction.cs" />
     <Compile Include="Builder\EscapeMode.cs" />
-    <Compile Include="Builder\Quantifiers\ExactQuantifier.cs" />
+    <Compile Include="Builder\Quantifier\ExactQuantifier.cs" />
     <Compile Include="Builder\ExpressionKind.cs" />
     <Compile Include="Builder\Expressions.cs" />
-    <Compile Include="Builder\Alternations\Alternations.cs" />
-    <Compile Include="Builder\Anchors\Anchors.cs" />
+    <Compile Include="Builder\Alternation\Alternations.cs" />
+    <Compile Include="Builder\Anchor\Anchors.cs" />
     <Compile Include="Builder\Characters.cs" />
     <Compile Include="Builder\Assertion\Assertions.cs" />
     <Compile Include="Builder\CharClasses.cs" />
-    <Compile Include="Builder\Groups\Groups.cs" />
-    <Compile Include="Builder\Quantifiers\Quantifiers.cs" />
+    <Compile Include="Builder\Group\Groups.cs" />
+    <Compile Include="Builder\Quantifier\Quantifiers.cs" />
     <Compile Include="Builder\UnicodeBlocks.cs" />
     <Compile Include="Builder\UnicodeCategories.cs" />
     <Compile Include="Builder\Expression.cs" />
-    <Compile Include="Builder\Alternations\Expression.cs" />
-    <Compile Include="Builder\Anchors\Expression.cs" />
+    <Compile Include="Builder\Alternation\Expression.cs" />
+    <Compile Include="Builder\Anchor\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_Characters.cs" />
     <Compile Include="Builder\Assertion\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_CharClass.cs" />
     <Compile Include="Builder\Expression\Expression_Chars.cs" />
-    <Compile Include="Builder\Groups\Expression.cs" />
+    <Compile Include="Builder\Group\Expression.cs" />
     <Compile Include="Builder\Expression\Expression_Other.cs" />
-    <Compile Include="Builder\Quantifiers\Expression.cs" />
-    <Compile Include="Builder\Quantifiers\FromToQuantifier.cs" />
-    <Compile Include="Builder\Groups\GroupingConstruct.cs" />
+    <Compile Include="Builder\Quantifier\Expression.cs" />
+    <Compile Include="Builder\Quantifier\FromToQuantifier.cs" />
+    <Compile Include="Builder\Group\GroupingConstruct.cs" />
     <Compile Include="Builder\IBaseGroup.cs" />
     <Compile Include="Builder\IdentifierSeparatorKind.cs" />
     <Compile Include="Builder\IExcludedGroup.cs" />
-    <Compile Include="Builder\Alternations\AlternationConstruct.cs" />
+    <Compile Include="Builder\Alternation\AlternationConstruct.cs" />
     <Compile Include="Builder\InlineOptions.cs" />
     <Compile Include="Builder\Expressions\NameBackreference.cs" />
-    <Compile Include="Builder\Groups\NumberNamedGroup.cs" />
-    <Compile Include="Builder\Groups\NamedGroup.cs" />
-    <Compile Include="Builder\Groups\NonbacktrackingGroup.cs" />
-    <Compile Include="Builder\Groups\NoncapturingGroup.cs" />
+    <Compile Include="Builder\Group\NumberNamedGroup.cs" />
+    <Compile Include="Builder\Group\NamedGroup.cs" />
+    <Compile Include="Builder\Group\NonbacktrackingGroup.cs" />
+    <Compile Include="Builder\Group\NoncapturingGroup.cs" />
     <Compile Include="Builder\Expressions\NumberBackreference.cs" />
-    <Compile Include="Builder\Groups\GroupOptions.cs" />
-    <Compile Include="Builder\Alternations\AnyExpression.cs" />
+    <Compile Include="Builder\Group\GroupOptions.cs" />
+    <Compile Include="Builder\Alternation\AnyExpression.cs" />
     <Compile Include="Builder\Expressions\QuantifiableExpression.cs" />
-    <Compile Include="Builder\Quantifiers\OneManyQuantifier.cs" />
-    <Compile Include="Builder\Quantifiers\MaybeManyQuantifier.cs" />
-    <Compile Include="Builder\Quantifiers\Quantifier.cs" />
-    <Compile Include="Builder\Quantifiers\QuantifierKind.cs" />
-    <Compile Include="Builder\Quantifiers\MaybeQuantifier.cs" />
-    <Compile Include="Builder\Groups\Subexpression.cs" />
+    <Compile Include="Builder\Quantifier\OneManyQuantifier.cs" />
+    <Compile Include="Builder\Quantifier\MaybeManyQuantifier.cs" />
+    <Compile Include="Builder\Quantifier\Quantifier.cs" />
+    <Compile Include="Builder\Quantifier\QuantifierKind.cs" />
+    <Compile Include="Builder\Quantifier\MaybeQuantifier.cs" />
+    <Compile Include="Builder\Group\Subexpression.cs" />
     <Compile Include="Builder\Substitutions.cs" />
     <Compile Include="Builder\Syntax\Syntax.cs" />
     <Compile Include="Builder\Syntax\Syntax_Anchors.cs" />
